--- a/_config.yml
+++ b/_config.yml
@@ -102,4 +102,6 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repository: https://github.com/wenyupeng/wenyupeng.github.io.git
+  branch: main
