--- a/_config.next.yml
+++ b/_config.next.yml
@@ -203,7 +203,7 @@ toc:
 # ---------------------------------------------------------------
 
 # Show multilingual switcher in footer.
-language_switcher: false
+language_switcher: true
 
 footer:
   # Specify the year when the site was setup. If not defined, current year will be used.
@@ -488,7 +488,7 @@ exturl_icon: true
 
 # Google Webmaster tools verification.
 # See: https://developers.google.com/search
-google_site_verification:
+google_site_verification: chriswen430
 
 # Bing Webmaster tools verification.
 # See: https://www.bing.com/webmasters
